# neo-sdk

./: .gitignore  APIs.md  CMakeLists.txt  README.md
cmake/: NeoConfig.cmake  config.h.in
drivers/rules/: usb-serial.rules
examples/: example.cc  example.cpp
include/: error.hpp  protocol.h  protocol.hpp  queue.hpp  serial.h  serial.hpp
include/neo/: neo.h  neo.hpp
neopy/: .gitignore  README.md  setup.py
neopy/neopy/: __init__.py  __main__.py
script/: installNeoSDK.sh
src/: neo.cpp  neo_ctl.cpp  protocol.cpp
src/unix/: serial.cpp
src/win/: serial.cpp
